@@ -1,39 +1,41 @@
 # PEERSIM EXAMPLE 2
-#random.seed 1234567890
+
+random.seed 1234567890
+
 simulation.cycles 30
-control.0 peersim.cdsim.Shuffle
 
-overlay.size 50000
-overlay.maxsize 200000
+control.shf peersim.cdsim.Shuffle
+
+network.size 50000
  
-protocol.0 example.newscast.SimpleNewscast
-protocol.0.cache 20
+protocol.lnk example.newscast.SimpleNewscast
+protocol.lnk.cache 20
 
-protocol.1 example.aggregation.AverageFunction
-protocol.1.linkable 0
+protocol.avg example.aggregation.AverageFunction
+protocol.avg.linkable lnk
 
-init.0 peersim.dynamics.WireKOut
-init.0.protocol 0
+init.0 WireKOut
+init.0.protocol lnk
 init.0.k 20
 
-# UNCOMMENT THE FOLLOWING LINES TO GET A PEAK DISTRIBUTION
-#init.1 example.aggregation.PeakDistributionInitializer
-#init.1.value 10000
-#init.1.at 0
-#init.1.protocol 1
+init.1 example.aggregation.PeakDistributionInitializer
+init.1.value 10000
+init.1.protocol avg
 
-# UNCOMMENT THE FOLLOWING LINES TO GET A LINEAR DISTRIBUTION
-init.1 peersim.vector.LinearDistribution
-init.1.protocol 1
-init.1.max 100
-init.1.min 1
+init.2 LinearDistribution
+init.2.protocol 1
+init.2.max 100
+init.2.min 1
+
+# you can change this to include the linear initializer instead
+include.init 0 1 
 
 control.1 example.aggregation.AverageObserver
-control.1.protocol 1
+control.1.protocol avg
 
-control.2 peersim.dynamics.DynamicNetwork
+control.2 DynamicNetwork
 control.2.add -500
-control.2.minsize 4000
+#control.2.minsize 4000
 control.2.from 5
 control.2.until 10
  
