@@ -1,43 +1,0 @@
-# PEERSIM EXAMPLE 2 -UPDATED- TO SHOW THE NEW PEERSIM CONFIGURATION FEATURES
-# (SINCE RELEASE 0.2).
-#random.seed 1234567890
-simulation.cycles 30
-control.0 peersim.cdsim.Shuffle
-
-# Imposes the correct protocol running order:
-order.protocol ncast,avgagr
-include.control avgobs
-
-overlay.size 50000
-overlay.maxsize 200000
- 
-protocol.ncast example.newscast.SimpleNewscast
-protocol.ncast.cache 20
-
-protocol.avgagr example.aggregation.AverageFunction
-protocol.avgagr.linkable ncast
-
-init.wrr peersim.dynamics.WireKOut
-init.wrr.protocol ncast
-init.wrr.k 20
-
-# UNCOMMENT THE FOLLOWING LINES TO GET A PEAK DISTRIBUTION
-#init.pkdistrib example.aggregation.PeakDistributionInitializer
-#init.pkdistrib.value 10000
-#init.pkdistrib.protocol avgagr
-
-# UNCOMMENT THE FOLLOWING LINES TO GET A LINEAR DISTRIBUTION
-init.ldistrib peersim.vector.LinearDistribution
-init.ldistrib.protocol avgagr
-init.ldistrib.max 100
-init.ldistrib.min 1
-
-control.avgobs example.aggregation.AverageObserver
-control.avgobs.protocol avgagr
-
-control.dnetwork peersim.dynamics.DynamicNetwork
-control.dnetwork.add -500
-control.dnetwork.minsize 4000
-control.dnetwork.from 5
-control.dnetwork.until 10
- 
